# studious

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  chart.md  pyproject.toml  requirements.txt  test_llm.py
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/agents/: agent_model.py  hybrid_search.py  multi_turn_agentic.py  pipeline.py  query_expander.py  retrieval.py  router.py
src/agents/agentic/: agentic.py  grader.py  planner.py  router.py  synthesizer.py
src/agents/graph/: edges.py  graph.py  nodes.py  runner.py  state.py
src/agents/memory/: conversation_model.py  episodic.py  query_rewriter.py  qwery_rewritter.py  short_term.py
src/api/: deps.py  main.py
src/api/routers/: document_routes.py  query_router.py
src/common/llm/: base.py  cerebras.py  gemini.py  groq.py
src/common/services/: qdrant.py  reranker.py
src/common/storage/: base_storage.py  gcp_storage.py  local_storage.py  (+1 more)
src/ingestion/: chunk.py  cli.py  embedding.py  parsing.py  processor.py  qdrant.py
src/llm/: base.py  cerebras.py  gemini.py  groq.py
src/services/: qdrant.py  reranker.py  sparse_index.py
src/storage/: base_storage.py  gcp_storage.py  local_storage.py  storage_factory.py
src/utils/: config.py  constants.py  doc_cache.py  factory.py  hasher.py  helper.py  tokenizer.py
tests/unit/: test_agents_and_embedding.py  test_chunk.py  test_docling_parser.py  test_graph.py  test_hybrid_search.py  test_llm.py  test_memory.py  test_services.py  test_storage.py  test_synthesizer.py
utils/: config.py  constants.py
web_ui/: main.py
(+15 files in other folders)
