[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="studious"
version="0.0.2"
readme="README.md"
requires-python=">=3.10"

[tool.ruff]
target-version = "py310"

[tool.logfire]
ignore_no_config = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "utils*"]
