[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studious"
description = "Agentic Retrieval-Augmented Generation"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="Mano Deepan", email="manodeepan2001@gmail.com"}
]
keywords = ["fastapi", "rag", "ai"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E402",
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"

[tool.logfire]
ignore_no_config = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]


[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.env.example"]
